@@ -4,6 +4,7 @@ This package will add a few officially supported but non-essential filters to Pr
 
 Filters installed:
 [list]
+[li]A patch for the arcade mod[/li]
 [li]A redirection patch for the SEO4SMF mod[/li]
 [li]Pretty URLs for Tiny Portal's articles[/li]
 [/list]
